--- a/templates/fish/functions/z.j2
+++ b/templates/fish/functions/z.j2
@@ -22,8 +22,8 @@
 #   * z -t foo  # cd to most recently accessed dir matching foo
 #   * z -l foo  # list matches instead of cd
 
-function z -d "Jump to a recent directory"
-    [ -z $_Z_DATA ]; and set -l _Z_DATA "$HOME/.z"
+function z -d "Jump to a frecent directory"
+    [ -z $_Z_DATA ]; and set -l _Z_DATA "{{ z_data_file }}"
     touch $_Z_DATA
 
     # add entries
@@ -187,5 +187,3 @@ function z -d "Jump to a recent directory"
 function __z_auto_add --on-variable  PWD  -d 'Set up automatic population of the directory list for z'
     z --add $PWD
 end
-
-[ $_Z_CMD ]; and alias $_Z_CMD z
